# IP-Frontend/src/api/models.ts
@@ -9,6 +9,9 @@ export { LimitParamDto } from './models/limit-param-dto';
 export { Recomandare } from './models/recomandare';
 export { RecomandareDto } from './models/recomandare-dto';
 export { Test } from './models/test';
+export { TimeSpan } from './models/time-span';
 export { User } from './models/user';
 export { UserDto } from './models/user-dto';
+export { UserLoginDto } from './models/user-login-dto';
 export { UserTableDto } from './models/user-table-dto';
+export { UserTokens } from './models/user-tokens';
