# IP-Frontend/src/api/models/user-dto.ts
@@ -3,18 +3,19 @@
 export interface UserDto {
   alergii?: null | string;
   cnp?: null | string;
-  cod_postal?: number;
-  consultatii_cardio?: null | string;
+  codPostal?: number;
+  consulatiiCardio?: null | string;
   email?: null | string;
   idAdmin?: null | string;
-  istoric_medical?: null | string;
-  loc_de_munca?: null | string;
-  nr_strada?: number;
-  nr_tel?: null | string;
+  istoricMedical?: null | string;
+  locDeMunca?: null | string;
+  nrStrada?: number;
   nume?: null | string;
   oras?: null | string;
+  password?: null | string;
   prenume?: null | string;
   profesie?: null | string;
   strada?: null | string;
+  telefon?: null | string;
   varsta?: number;
 }
