# IP-Frontend/src/api/models/user-tokens.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+import { TimeSpan } from './time-span';
+export interface UserTokens {
+  expiredTime?: string;
+  guidId?: string;
+  refreshToken?: null | string;
+  token?: null | string;
+  userEmail?: null | string;
+  userId?: null | string;
+  validity?: TimeSpan;
+}
