# IP-Frontend/src/api/models/user.ts
@@ -2,20 +2,22 @@
 /* eslint-disable */
 export interface User {
   alergii?: null | string;
-  cnp?: null | string;
-  cod_postal?: number;
-  consultatii_cardio?: null | string;
-  email?: null | string;
+  cnp: string;
+  codPostal?: number;
+  consulatiiCardio?: null | string;
+  email: string;
   id?: null | string;
   idAdmin?: null | string;
-  istoric_medical?: null | string;
-  loc_de_munca?: null | string;
-  nr_strada?: number;
-  nr_tel?: null | string;
-  nume?: null | string;
+  istoricMedical?: null | string;
+  locDeMunca?: null | string;
+  nrStrada?: number;
+  nume: string;
   oras?: null | string;
-  prenume?: null | string;
+  password: string;
+  prenume: string;
   profesie?: null | string;
+  salt?: null | string;
   strada?: null | string;
+  telefon: string;
   varsta?: number;
 }
