# IP-Web/Controllers/AuthController.cs
@@ -20,7 +20,7 @@ public class AuthController : ControllerBase
 
 
     [HttpPost]
-    public IActionResult GetToken(UserLoginDTO userLogin)
+    public ActionResult<UserTokens> GetToken(UserLoginDTO userLogin)
     {
          try
          {
